         I still have to think how to properly implement this. This is related to the
         desing of a prototype Kodi games database.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2865413#pid2865413
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2867785#pid2867785

WIP      [COLLECTIONS] Current way of storing the collection artwork, in a unified XML file,
         is not good. Think of a good way to exporting collections (for example, store the
         artwork in a subdirectory). Possible way of solving filename collisions
         ROM_name_platform_fanart.png, platform is the short name and it's only used if
         there is filename amgibuity (same ROM name in different platforms in the collection).

WIP      [MULTIDISC] Edit multi-disc ROMs.

WIP      [MULTIDISC] Fix artwork support for mult-disc ROMs.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2628912#pid2628912

WIP      [MISC] Changes and suggestions propoed by Atsumori.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2560843#pid2560843
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2586596#pid2586596

WIP      [MANUALS] Port the PDF manual reader from AML into AEL.

WIP      [ROM AUDIT] Add an option to create a default Parent ROM for Redump DATs or NoIntro DATs
         with no PClone information. See previous feature.

WIP      [ROM AUDIT] Create a "fake" Parent/Clone list from filenames ala NARS (NARS Advanced ROM
         Sorting). In "Edit Launcher", "Audit ROMs / Launcher view mode" include a new option
         like "Create PClone DAT based on ROM filenames"

WIP      [ROM AUDIT] Options to generate the 1G1R parent list, like prefer ROMs from Europe,
         Japan or USA. This resembles what NARS No-Intro filtering does.

WIP      [SCRAPERS] Asset scrapers are disabled/not working for standalone launchers. Fix this.